--- a/sentry-project/package.json
+++ b/sentry-project/package.json
@@ -13,7 +13,8 @@
     "@sentry/react": "^9.38.0",
     "@sentry/vite-plugin": "^3.5.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.60.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
