--- a/sentry-project/package.json
+++ b/sentry-project/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ariakit/react": "^0.4.17",
     "@sentry/react": "^9.38.0",
     "@sentry/vite-plugin": "^3.5.0",
     "react": "^19.1.0",
