--- a/sentry-project/package.json
+++ b/sentry-project/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@ariakit/react": "^0.4.17",
+    "@reduxjs/toolkit": "^2.9.1",
     "@sentry/react": "^9.38.0",
     "@sentry/vite-plugin": "^3.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.60.0"
+    "react-hook-form": "^7.60.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
